// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScoreScreen ScoreScreen renders empty table 1`] = `
<div>
  <div
    id="title"
  >
    mock-title
  </div>
  <div>
    Score Table
  </div>
</div>
`;

exports[`ScoreScreen ScoreScreen renders title and table 1`] = `
<div>
  <div
    id="title"
  >
    mock-title
  </div>
  <div>
    Score Table
  </div>
  <div>
    <div>
      Question
    </div>
    <div>
      Mock Question 1
    </div>
    <div>
      Score
    </div>
    <div>
      100
      %
    </div>
    <div>
      Correct Answer
    </div>
    <div>
      Mock Correct Answer 1
    </div>
    <div>
      Given Answer
    </div>
    <div>
      Mock Given Answer 1
    </div>
  </div>
  <div>
    <div>
      Question
    </div>
    <div>
      Mock Question 2
    </div>
    <div>
      Score
    </div>
    <div>
      0
       points
    </div>
    <div>
      Correct Answer
    </div>
    <div>
      Mock Correct Answer 2
    </div>
    <div>
      Given Answer
    </div>
    <div>
      Mock Given Answer 2
    </div>
  </div>
</div>
`;

exports[`ScoreScreen start renders as expected 1`] = `
<ScoreScreenApp
  qset={Object {}}
  scoreTable={
    Array [
      Object {
        "data": Array [
          "Mock Question 1",
          "Mock Correct Answer 1",
          "Mock Given Answer 1",
        ],
        "score": 100,
        "symbol": "%",
      },
      Object {
        "data": Array [
          "Mock Question 2",
          "Mock Correct Answer 2",
          "Mock Given Answer 2",
        ],
        "score": 0,
        "symbol": " points",
      },
    ]
  }
  title="mock-name"
/>
`;

exports[`ScoreScreen update renders as expected 1`] = `
<ScoreScreenApp
  qset={Object {}}
  scoreTable={
    Array [
      Object {
        "data": Array [
          "Mock Question 1",
          "Mock Correct Answer 1",
          "Mock Given Answer 1",
        ],
        "score": 100,
        "symbol": "%",
      },
      Object {
        "data": Array [
          "Mock Question 2",
          "Mock Correct Answer 2",
          "Mock Given Answer 2",
        ],
        "score": 0,
        "symbol": " points",
      },
    ]
  }
  title=""
/>
`;
